--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -1,3 +1,6 @@
+<% tabnav :profile do %>
+<div class="row">
+<div class="column grid_11">
 <title>Authentications</title>
 
 <table>
@@ -18,4 +21,6 @@
 
 <%= link_to image_tag('douban.png', :alt=>'douban'), user_omniauth_authorize_path(:douban)%>
 <%= link_to image_tag('tsina.png', :alt=>'sina weibo'), user_omniauth_authorize_path(:tsina)%>
-
+</div>
+</div>
+<% end %>
