--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<% tabnav :profile do %>
+<div class="row">
+<div class="column grid_11">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -5,7 +8,7 @@
 
   <p><%= f.label :email %><br />
   <%= f.email_field :email %></p>
-  
+
   <p><%= f.label :name %><br />
   <%= f.text_field :name %></p>
 
@@ -28,3 +31,6 @@
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
 
 <%= link_to "Back", :back %>
+</div>
+</div>
+<% end %>
