--- a/app/views/admin/partners/edit.html.erb
+++ b/app/views/admin/partners/edit.html.erb
@@ -73,22 +73,13 @@
             <% end %>
           <% end %>
       </div>
-      <%= f.fields_for :admin_users do |admin_user|%>
-          <p><%= admin_user.label :email %><br />
-          <%= admin_user.email_field :email %></p>
-
-          <p><%= admin_user.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= admin_user.password_field :password %></p>
-
-          <p><%= admin_user.label :password_confirmation %><br />
-          <%= admin_user.password_field :password_confirmation %></p>
-          <% @roles.each do |role|%>
-            <div>
-              <%= check_box_tag 'partner[admin_users_attributes][0][role_ids][]', role.id, @admin.roles.include?(role)%>
-              <%=h role.name%>
-            </div>
-          <%end%>
-          <%= hidden_field_tag 'partner[admin_users_attributes][0][role_ids][]', '' %>
+      <% @partner.admin_users.each_with_index do |admin_user, index|%>
+        <%= f.fields_for :admin_users, admin_user do |builder|%>
+	        <div class="admin_user">
+		      <%= link_to_function "Remove", "remove_admin_user(this)"%>
+	          <%= render 'admin_user', :f => builder, :index => index, :admin_user=>admin_user %>
+	        </div>
+	    <%end%>
       <%end%>
       <p><%= f.submit "Update" %></p>
     <% end %>
