--- a/app/views/admin/partners/_admin_user.html.erb
+++ b/app/views/admin/partners/_admin_user.html.erb
@@ -1,5 +1,4 @@
-
-<%= f.hidden_field(:_destroy)%>
+<div class="admin_user">
 <p>
   <%= f.label "E-mail" %><br/>
   <%= f.email_field :email %>
@@ -19,3 +18,6 @@
   </p>
 <%end%>
 <%= hidden_field_tag "partner[admin_users_attributes][#{index}][role_ids][]", '' %>
+<%= f.hidden_field(:_destroy)%>
+<%= link_to_function "Remove Partner Account", "remove_admin_user(this)"%>
+</div>
