--- a/app/views/admin/partners/new.html.erb
+++ b/app/views/admin/partners/new.html.erb
@@ -63,15 +63,7 @@
           </p>
         <% end %>
       </div>
-      <% @partner.admin_users.each_with_index do |admin_user, index|%>
-        <%= f.fields_for :admin_users, admin_user do |builder|%>
-	      <div class="admin_user">
-		    <%= link_to_function "Remove", "remove_admin_user(this)"%>
-	        <%= render 'admin_user', :f => builder, :index => index, :admin_user => admin_user %>
-	      </div>
-	    <%end%>
-	    <%= link_to_function "Add", "add_admin_user"%>
-      <%end%> 
+      <%= link_to_add_admin_user "Add Partner Account", f, :admin_users%> 
       <p><%= f.submit "Create" %></p>
     <% end %>
   </div>
