--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1209,3 +1209,9 @@ h1 {
     color: #F58220;
 }
 
+.admin_user {
+   border-style: solid;
+   width: 250px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
